# GPTNext

./: .gitignore  README.md  bench.py  model.py  pyproject.toml  run_parallel_experiments.py  train.py  transfer_from_branches.py
config/: train_shakespeare_char.py
experiments/: 00_baseline_train.py  _00_baseline_model.py  _00_baseline_train.py  _01_spec_decoding.py  _01_spec_decoding_huggingface.py  _01_spec_decoding_model.py  _01_spec_decoding_train.py  _01_speculative_decoding_reference.py  _02_groupedq_attn.py  _02_groupedq_attn_model.py  _02_groupedq_attn_train.py  _03_rope.py  _03_rope_model.py  _03_rope_train.py  _05_02_4bit_model.py  _05_05_4bit_train.py  _05_int8_model.py  _05_int8_train.py  _06_no_compile_train.py  _07_noflash_model.py  _07_noflash_train.py  _08_rmsnorm_model.py  _08_rmsnorm_train.py  _09_soap_model.py  _09_soap_train.py  _11_swiglu_model.py  _11_swiglu_train.py  _12_muon_model.py  _12_muon_optim.py  _12_muon_train.py
