[project]
name = "gptnext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "bitsandbytes>=0.45.5",
    "datasets>=3.2.0",
    "ipykernel>=6.29.5",
    "lovely-tensors>=0.1.18",
    "numpy>=2.2.1",
    "psutil>=6.1.1",
    "termcolor>=2.5.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.47.1",
    "wandb>=0.19.1",
]
